<resources>
    <string name="app_name">Friends Planner</string>
    <string name="sunday">Sunday</string>
    <string name="saturday">Saturday</string>
    <string name="friday">Friday</string>
    <string name="thursday">Thursday</string>
    <string name="wednesday">Wednesday</string>
    <string name="tuesday">Tuesday</string>
    <string name="monday">Monday</string>
    <string name="sample_task">Do all of the blue dishes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_set_time">SET TIME</string>
    <string name="do_the_laundry_hint">Do the laundry</string>
    <string name="empty_task_warning">A task cannot be empty</string>
</resources>
